# data-analytics-prototypes

./: .gitignore  .plzconfig  BUILD  README.md  numpy-advanced.ipynb  numpy-first-steps.ipynb  numpy_advanced.py  numpy_first_steps.py  numpy_next_steps.ipynb  numpy_next_steps.py  setup.sh
.github/workflows/: c.yml  fortran.yml  llvm.yml  numpy.yml  python.yml  r.yml
.run/: llvm.run.xml  r.run.xml
Airflow/: README.md  docker-compose.yml  pyproject.toml
Airflow/aws/: .terraform.lock.hcl  README.md  main.tf
Airflow/celery-executor/: README.md  docker-compose.yml
Airflow/dags/: README.md  branch.py  hello_world.py  scheduled_cron.py  scheduled_frequency.py  scheduled_preset.py  taskflow.py  trigger_rule_none_failed.py  utils.py  xcom.py
Airflow/dags/fan_in_out/: README.md  create_price_table.sql  fan_in_out.py  insert_ethereum_price.sql  select_prices.sql  utils.py
Airflow/dags/fan_in_out/sql/: README.md  insert_bitcoin_price.sql  insert_ethereum_price.sql
Airflow/local-executor/: README.md  docker-compose.yml
Airflow/sequential-executor/: Dockerfile  README.md  docker-compose.yml
Airflow/tests/: dag_test.py
C/: README.md  cmake.sh  matrices.c
Fortran/: Dockerfile  README.md  basics.f90  cmake.sh
LLVM/: BUILD  Dockerfile  README.md  arithmetic.ll  basics.ll  helloworld.ll  run_arithmetic.sh  setup.sh
Python/: Dockerfile  README.md  setup.sh
Python/matplotlib/: BUILD  README.md  install_dependencies.sh  matplotlib-first-steps.ipynb  matplotlib-first-steps.py
Python/numpy/: BUILD  README.md  install_dependencies.sh  numba.ipynb  numba.py  numba_basics.py  numpy-advanced.ipynb  numpy-first-steps.ipynb  (+4 more)
R/: BUILD  Dockerfile  README.md  basics.r
Spark/: BUILD  README.md
Spark/python/: BUILD  README.md  pyproject.toml
Spark/python/da_spark_prototypes/: exercise_table.py  main.py
Spark/python/da_spark_prototypes/test/: test_main.py
c/: CMakeLists.txt
fortran/: CMakeLists.txt  cmake.sh  hello_world.f90  matrices.f90  setup.sh
(+19 files in other folders)
