# Poetry configuration for orchestrating the Python project and its dependencies
# Author: Andrew Jarombek
# Date: 10/9/2020

[tool.poetry]
name = "da-spark-prototypes"
version = "0.1.0"
description = "Data Analyics Prototypes for Pyspark"
authors = ["Andrew Jarombek <andrew@jarombek.com>"]
readme = "README.md"
packages = [{include = "da_spark_prototypes"}]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "3.3.0"

[tool.poetry.dev-dependencies]
black = "22.10.0"
pytest = "7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
target-version = ["py38"]
